Updated branding to Wildling Acres and removed logo

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ZestRoot Farm - Premium Garlic Producer</title>
+    <title>Wildling Acres - Premium Garlic Producer</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Inter:wght@300;400;500;600&display=swap" rel="stylesheet">
 </head>
@@ -12,8 +12,7 @@
     <nav class="navbar">
         <div class="nav-container">
             <div class="nav-logo">
-                <img src="images/logo.jpg" alt="ZestRoot Farm Logo" class="logo">
-                <h2>ZestRoot Farm</h2>
+                <h2>Wildling Acres</h2>
             </div>
             <ul class="nav-menu">
                 <li><a href="#home">Home</a></li>
@@ -33,7 +32,7 @@
     <!-- Hero Section -->
     <section id="home" class="hero">
         <div class="hero-content">
-            <h1>Premium Garlic from ZestRoot Farm</h1>
+            <h1>Premium Garlic from Wildling Acres</h1>
             <p>Sustainably grown, hand-harvested garlic with exceptional flavor and quality</p>
             <button class="cta-button">Explore Our Garlic</button>
         </div>
@@ -47,8 +46,8 @@
         <div class="container">
             <div class="about-content">
                 <div class="about-text">
-                    <h2>About ZestRoot Farm</h2>
-                    <p>Located in the heart of agricultural country, ZestRoot Farm has been dedicated to growing premium garlic for over a decade. Our commitment to sustainable farming practices and attention to detail ensures that every bulb we harvest meets the highest standards of quality and flavor.</p>
+                    <h2>About Wildling Acres</h2>
+                    <p>Located in the heart of agricultural country, Wildling Acres has been dedicated to growing premium garlic for over a decade. Our commitment to sustainable farming practices and attention to detail ensures that every bulb we harvest meets the highest standards of quality and flavor.</p>
                     <p>We specialize in heirloom varieties that have been carefully selected for their robust flavor profiles and superior storage capabilities. Our garlic is grown without synthetic pesticides, using only organic methods that respect both the land and our customers' health.</p>
                     <div class="farm-stats">
                         <div class="stat">
@@ -160,7 +159,7 @@
                     <h3>Contact Information</h3>
                     <div class="contact-item">
                         <strong>📍 Address:</strong>
-                        <p>ZestRoot Farm<br>
+                        <p>Wildling Acres<br>
                         [Your Address]<br>
                         [City, State ZIP]</p>
                     </div>
@@ -202,7 +201,7 @@
         <div class="container">
             <div class="footer-content">
                 <div class="footer-section">
-                    <h3>ZestRoot Farm</h3>
+                    <h3>Wildling Acres</h3>
                     <p>Premium garlic grown with care and passion since 2014.</p>
                 </div>
                 <div class="footer-section">
@@ -224,7 +223,7 @@
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2025 ZestRoot Farm. All rights reserved.</p>
+                <p>&copy; 2025 Wildling Acres. All rights reserved.</p>
             </div>
         </div>
     </footer>
