--- a/index.html
+++ b/index.html
@@ -138,12 +138,7 @@
                     <div class="contact-item">
                         <strong>📍 Address:</strong>
                         <p>Wildling Acres<br>
-                        [Your Address]<br>
-                        [City, State ZIP]</p>
-                    </div>
-                    <div class="contact-item">
-                        <strong>📞 Phone:</strong>
-                        <p>(555) 123-4567</p>
+                        Salem, Ohio</p>
                     </div>
                     <div class="contact-item">
                         <strong>📧 Email:</strong>
@@ -195,7 +190,7 @@
                     <h3>Follow Us</h3>
                     <div class="social-links">
                         <a href="#">Facebook</a>
-                        <a href="#">Instagram</a>
+                        <a href="https://www.instagram.com/locustlanefarmers/">Instagram</a>
                         <a href="#">Twitter</a>
                     </div>
                 </div>
